tests/invalid/strict_typing/phpdoc_var_generic_array_matches.php
<?php

class Test {
    /**
     * @var array<string, int>
     */
    private $map = ["key1" => 123, "key2" => 456];

    /**
     * @var array<int, string>
     */
    private $names = [0 => "Alice", 1 => "Bob"];
}
